<resources>
    <string name="app_name">Star Trek Species Quiz</string>
    <string name="quiz_title">Star trek Species Quiz</string>
    <string name="question_first">1. What species is Captain Kirk?</string>
    <string name="question_second">2. Which species prizes money above everything else?</string>
    <string name="question_third">3. Which planet is the home planet of Spock?</string>
    <string name="question_fourth">4. What is Major Kira?</string>
    <string name="question_fifth">5. Which is a \'joined\' species?</string>
    <string name="question_sixth">6. Sarek is...?</string>
    <string name="question_seventh">7. Which two of these species have been at war with Federation?</string>
    <string name="question_eighth">8. Lwaxana Troi is a what?</string>
    <string name="question_nineth">9. Odo is a...?</string>
    <string name="question_tenth">10. What species once occupied Bajor?</string>
    <string name="hint">Name of planet</string>
    <string name="vulcan">Vulcan</string>
    <string name="romulan">Romulan</string>
    <string name="klingon">Klingon</string>
    <string name="human">Human</string>
    <string name="cardassian">Cardassian</string>
    <string name="ferengi">Ferengi</string>
    <string name="barolian">Barolian</string>
    <string name="bajoran">Bajoran</string>
    <string name="tholian">Tholian</string>
    <string name="talaxian">Talaxian</string>
    <string name="betazoid">Betazoid</string>
    <string name="trill">Trill</string>
    <string name="vidiian">Vidiian</string>
    <string name="bolian">Bolian</string>
    <string name="andorian">Andorian</string>
    <string name="breen">Breen</string>
    <string name="orion">Orion</string>
    <string name="benzite">Benzite</string>
    <string name="rigellian">Rigellian</string>
    <string name="shapeshifter">Shapeshifter</string>
    <string name="hair_dresser">Hair Dresser</string>
    <string name="chameleon">Chameleon</string>
    <string name="organian">Organian</string>
    <string name="kzinti">Kzinti</string>
    <string name="hirogen">Hirogen</string>
    <string name="gorn">Gorn</string>
    <string name="text_result">Get result</string>
    <string name="text_vulcan">VULCAN</string>
    <string name="toast_not_answered">Please answer all questions, thanks.</string>
    <string name="toast_part_one">"Quiz completed!\nYou scored "</string>
    <string name="toast_part_two">" of 10 questions correct."</string>
    <string name="text_final">" of 10 questions correct"</string>
</resources>